[workspace]
members = ["binaries/editor", "binaries/runner", "components/neuron_common", "components/neuron_runtime", "components/neuron_script_api", "components/neuron_script_api_procmacro", "sample_plugin"]

[package]
name = "neuron_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "25.0.0"
winit = "0.30.9"
thiserror = "2.0.12"
log = "0.4.27"
image = "0.25.6"
bytemuck = "1.23.0"
pollster = "0.4.0"
hashbrown = "0.15.2"
parking_lot = "0.12.3"
